# mx_tools

./: .gitignore  README.md  root.yml  speed.py
Hello/app/: CMakeLists.txt  build.gradle
Hello/app/src/androidTest/java/com/mx/example/hello/: ExampleInstrumentedTest.java
Hello/app/src/main/: AndroidManifest.xml
Hello/app/src/main/java/android_serialport_api/: SerialPort.java
Hello/app/src/main/java/com/mx/example/hello/: MainActivity.java
Hello/app/src/main/java/com/mx/speech/: DataReceiveListener.java  DictationResult.java  JsonParser.java
Hello/app/src/main/java/utils/: ChangeTool.java  SerialPortUtils.java
Hello/app/src/main/jni/serial_src/: serial-lib.c
Hello/app/src/main/jni/vad_src/: vad-lib.cpp  webrtc_vad.c
Hello/app/src/main/res/layout/: activity_main.xml  content_main.xml
Hello/app/src/main/res/menu/: menu_main.xml
Hello/app/src/test/java/com/mx/example/hello/: ExampleUnitTest.java
Hello/gradle/wrapper/: gradle-wrapper.properties
myLinuxSerialportTools/: Makefile  data.txt  frmmain.cpp  frmmain.h  frmmain.ui  myLinuxSerialportTools.pro  myStaticClass.h  myinclude.h  servo_tool.cpp
speech/: vad.py
speed_monitor/: create.py
stm32_serial_tool/: MainWindow.cpp  MainWindow.h  MainWindow.ui  qt_helloworld.pro
